# clib

./: pyproject.toml
src/clib/: __init__.py  graphics.py  lib.py  main.py  physics.py  ui.py
src/clib.egg-info/: PKG-INFO  SOURCES.txt
