[project]
name = "clib"
version = "0.0.1"
authors = [
  { name="Joshua Busst", email="joshua.busst@outlook.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JoshBusst/clib"
Issues = "https://github.com/JoshBusst/clib"